# Test-Task-PESK

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  railway.json
.github/workflows/: ci.yml  deploy.yml
app/: config.py
app/api/: __main__.py  dependencies.py  router.py  schemas.py  web.py
app/bot/: __main__.py  create_bot.py
app/bot/callbacks/: __init__.py  refresh.py
app/bot/filters/: __init__.py  city_input.py
app/bot/handlers/: __init__.py  city_query.py  help.py  search.py  start.py
app/bot/keyboards/: help.py  result.py  search.py  start.py
app/bot/middlewares/: __init__.py  logging.py  throttling.py
app/bot/utils/: config.py  formatters.py  logging.py  photo_cache.py
app/services/: city_info.py  currency.py  geo.py  http_client.py  weather.py
app/static/: style.css
app/utils/: cache.py  country_currencies.py
scripts/: build_static.py
templates/: base.html  index.html
tests/: conftest.py  test_api.py  test_cache.py  test_filters.py
