[project]
name = "Test-task-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "jinja2>=3.1,<4",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]
