[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "Test-task-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "jinja2>=3.1,<4",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]
lint = [
    "ruff>=0.8,<1",
    "mypy>=1.10,<2",
    "black>=24,<26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default args (FastAPI Query pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["app.bot.*", "app.config"]
ignore_errors = true
